# code-snippet-translator

./: .gitignore  CONTRIBUTING.md  README.md  SCOPE.md  cli.py  debug.py  debug_js.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yml  quality.yml  release.yml
examples/: add.js  add.py
templates/: function.js.j2
tests/: test_basic.py
tools/: parse_js.js
translators/: __init__.py  gen_java.py  gen_js.py  gen_py.py  ir.py  java_parser.py  js_parser.py  python_parser.py
